cambios en el server

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,6 @@
 PORT=3000
 COGNITO_GROUP_ID=us-east-2_ZftyYcuOW
 COGNITO_CLIENT_ID=73unhiqo6u7cj9jk2ag8pj9cj
+MONGO_USER=afranco
+MONGO_PASSWORD=asd123asd
+MONGO_DBNAME=test
