--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "amazon-cognito-identity-js": "^5.0.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
